# pythrel

./: README.md  pyproject.toml
.github/workflows/: publish.yml
pythrel/: base.py  database.py  orm.py
pythrel/adapters/: __init__.py  sqlite.py
tests/: postgres.py  sqlite.py
